Model table & sum: project, specification, table specificatio

--- a/app/assets/javascripts/calculating_helper.js.erb
+++ b/app/assets/javascripts/calculating_helper.js.erb
@@ -145,3 +145,26 @@ function isntNan(prv, prv_) {
     }
 }
 
+
+Array.prototype.uniq = function(){
+    return this.filter(function (elem, pos, arr) {
+        return arr.indexOf(elem) == pos;
+    });
+};
+
+// Comparison element in array
+function in_array(needle, haystack, strict) {   // Checks if a value exists in an array
+    // 
+    // +   original by: Kevin van Zonneveld (http://kevin.vanzonneveld.net)
+
+    var found = false, key, strict = !!strict;
+
+    for (key in haystack) {
+        if ((strict && haystack[key] === needle) || (!strict && haystack[key] == needle)) {
+            found = true;
+            break;
+        }
+    }
+
+    return found;
+}
