--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,6 +22,7 @@
       <th><%= t('project.planned_budget') %></th>
       <th><%= t('project.date_delivery_client') %></th>
       <th><%= t('project.amount_contract') %></th>
+      <th><%= "Сумма по спецификации "%></th>
       <th><%= t('project.client_prepayment') %></th>
       <th><%= t('project.client_surcharge') %></th>
       <th><%= t('project.status_transaction') %></th>
